# dkdeputils

./: README.md  dagknows.manifest  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg
dkdeputils/: aws.py  main.py  models.py  root.py  utils.py  versions.py
keys/: aws_host_key.pem  github_rsa  github_rsa.pub
