
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "0.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"dkdeputils/__init__.py" = [ "{version}" ]
# "setup.py" = [ "{version}", "{pep440_version}", ]
# "README.md" = [ "{version}", "{pep440_version}", ]
