
[metadata]
name = dkdeputils
version = attr: dkdeputils.__version__
author = Sriram Panyam
author_email = sri@dagknows.com
url = https://github.com/dagknows/dkdeputils
description = Common deployment utils for dagknows services
long_description = file: README.md
long_description_content_type = text/markdown
keywords = deployment tools, cli, api, setuptools
license = BSD 3-Clause License
classifiers =
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
  pyyaml
  Fabric
  requests
  boltons
  typer[all]

# [options.package_data]
[options.entry_points]
console_scripts =
  dkdep = dkdeputils.main:app
